[release/v0.4-201309]: Dashboard: resource board refactor for scrollbar's bug

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -1741,10 +1741,6 @@ a {
 	vertical-align: middle;
 }
 
-#region-aws-resource-data .table-head-fix {
-	display: none;
-}
-
 #region-aws-resource-data .scroll-wrap {
 	height: 340px;
 }
